# RestEasy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/: RestEasy Sample Architecture Diagram.excalidraw
resteasy/: __init__.py  __main__.py  info.py
resteasy-node/: README.md  pyproject.toml
resteasy-node/resteasy-node/: __init__.py  __main__.py
resteasy-node/resteasy_node/: __init__.py  __main__.py  info.py  main.py
resteasy-node/resteasy_node/core/: info.py
resteasy/ui/: main.py
src/resteasy/: __main__.py
src/resteasy/view/: __init__.py  dashboard.py
