[project]
name = "resteasy"
version = "0.1.0"
description = "A restic frontend for backing up game data, Podman volumes, and other files."
readme = "README.md"
authors = [{ name = "Chris1320", email = "chris1320is@protonmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.8.0.2",
]

[project.scripts]
resteasy = "resteasy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pylint>=3.3.1",
    "pytest>=8.3.3",
]
