[project]
name = "resteasy-node"
version = "0.1.0"
description = "Easily manage backups of your desktop, laptop, and server files using restic. (RestEasy-node)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]>=0.135.1"]

[dependency-groups]
dev = ["pylint>=4.0.5", "pytest>=9.0.2"]
